Make the account dropdown wider to prevent line wrapping
Fixes DD 71427-61

--- a/app/design/frontend/Travers/default/Magento_Company/styles/module/_common.scss
+++ b/app/design/frontend/Travers/default/Magento_Company/styles/module/_common.scss
@@ -744,7 +744,7 @@ $nav-delimiter__border-color: $color-gray82 !default;
         }
 
         ul.header.links {
-            min-width: 190px;
+            min-width: 220px;
             right: 0;
             padding: 10px 0;
 
